Remove the fixed column width bc the text of several event is overflowing

--- a/src/less/componants/programme.less
+++ b/src/less/componants/programme.less
@@ -1,10 +1,10 @@
 
 .program-table {
-  table-layout: fixed;
+  //table-layout: fixed;
 }
 .header-room{
   text-align: center;
-  width: 7rem;
+  //width: 7rem;
 }
 .slot-times-header {
   width: 4rem;
